src/main/java/com/hellonms/platforms/emp_orange/share/parser/snmp/Parser4MIB.java
/* Parser4MIB.java */
/* Generated By:JavaCC: Do not edit this line. Parser4MIB.java */
package com.hellonms.platforms.emp_orange.share.parser.snmp;

import java.math.BigInteger;
import java.util.ArrayList;
import java.util.List;

@SuppressWarnings({ "unused", "serial" })
public class Parser4MIB implements Parser4MIBConstants {

  final public MIB_MODULE_DEFINITIONS[] mib() throws ParseException {List<MIB_MODULE_DEFINITIONS> list = new ArrayList<MIB_MODULE_DEFINITIONS>();
        MIB_MODULE_DEFINITIONS item;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case USTRING:
      case WSTRING:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      item = moduleDefinitions();
list.add(item);
    }
{if ("" != null) return list.toArray(new MIB_MODULE_DEFINITIONS[0]);}
    throw new Error("Missing return statement in function");
  }

/////////////////////////////////////////////////////////////////////////////////////////////////////////////
// DEFINITIONS
/////////////////////////////////////////////////////////////////////////////////////////////////////////////
  final public MIB_MODULE_DEFINITIONS moduleDefinitions() throws ParseException {MIB_MODULE_DEFINITIONS module_definition = new MIB_MODULE_DEFINITIONS();
        String string = "";
        MIB_MODULE_ITEM item = null;
    string = aStringValue();
module_definition.setName(string);
    jj_consume_token(DEFINITIONS);
    jj_consume_token(DEFINE);
    jj_consume_token(BEGIN);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IMPORTS:
      case EXPORTS:
      case TEXTUAL_CONVENTION:
      case OBJECT_TYPE:
      case TRAP_TYPE:
      case OBJECT_IDENTITY:
      case OBJECT_GROUP:
      case NOTIFICATION_GROUP:
      case MODULE_IDENTITY:
      case MODULE_COMPLIANCE:
      case AGENT_CAPABILITIES:
      case NOTIFICATION_TYPE:
      case USTRING:
      case WSTRING:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      item = moduleItem();
if (item != null) { module_definition.addItem(item); } item = null;
    }
    jj_consume_token(END);
{if ("" != null) return module_definition;}
    throw new Error("Missing return statement in function");
  }

  final public MIB_MODULE_ITEM moduleItem() throws ParseException {MIB_MODULE_ITEM item = null;
    if (jj_2_1(2)) {
      item = imports();
    } else if (jj_2_2(2)) {
      exports();
    } else if (jj_2_3(3)) {
      item = objectIdentifier();
    } else if (jj_2_4(3)) {
      item = textualConvention();
    } else if (jj_2_5(3)) {
      item = syntaxDefine();
    } else if (jj_2_6(3)) {
      macro();
    } else if (jj_2_7(3)) {
      item = macroInstanceValid();
    } else if (jj_2_8(3)) {
      macroInstanceDiscard();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return item;}
    throw new Error("Missing return statement in function");
  }

/////////////////////////////////////////////////////////////////////////////////////////////////////////////
// IMPORTS
/////////////////////////////////////////////////////////////////////////////////////////////////////////////
  final public MIB_IMPORTS imports() throws ParseException {MIB_IMPORTS value = new MIB_IMPORTS();

        String string = "";
    jj_consume_token(IMPORTS);
    label_3:
    while (true) {
      importItem();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        importItem();
      }
      jj_consume_token(FROM);
      string = aStringValue();
value.addFrom(string);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TEXTUAL_CONVENTION:
      case OBJECT_TYPE:
      case TRAP_TYPE:
      case OBJECT_IDENTITY:
      case OBJECT_GROUP:
      case NOTIFICATION_GROUP:
      case MODULE_IDENTITY:
      case MODULE_COMPLIANCE:
      case AGENT_CAPABILITIES:
      case NOTIFICATION_TYPE:
      case BITS:
      case USTRING:
      case WSTRING:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
    }
    jj_consume_token(SEMI_COLON);
{if ("" != null) return value;}
    throw new Error("Missing return statement in function");
  }

  final public void exports() throws ParseException {
    jj_consume_token(EXPORTS);
    importItem();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMMA);
      importItem();
    }
    jj_consume_token(SEMI_COLON);
  }

  final public void importItem() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TEXTUAL_CONVENTION:{
      jj_consume_token(TEXTUAL_CONVENTION);
      break;
      }
    case OBJECT_TYPE:
    case OBJECT_IDENTITY:
    case MODULE_IDENTITY:{
      macroTypeValid();
      break;
      }
    case TRAP_TYPE:
    case OBJECT_GROUP:
    case NOTIFICATION_GROUP:
    case MODULE_COMPLIANCE:
    case AGENT_CAPABILITIES:
    case NOTIFICATION_TYPE:{
      macroTypeDiscard();
      break;
      }
    case BITS:{
      jj_consume_token(BITS);
      break;
      }
    case USTRING:
    case WSTRING:{
      aStringValue();
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/////////////////////////////////////////////////////////////////////////////////////////////////////////////
// OBJECT_IDENTIFIER
/////////////////////////////////////////////////////////////////////////////////////////////////////////////
  final public MIB_NODE objectIdentifier() throws ParseException {MIB_NODE value = new MIB_NODE();
        value.setValid(true);
        value.setMacroType(MIB_NODE.MIB_MACRO_TYPE.OBJECT_IDENTIFIER);

        String string = "";
        MIB_NAME_VALUE[] oid = {};
    string = wStringValue();
value.setName(string);
    jj_consume_token(OBJECT_IDENTIFIER);
    jj_consume_token(DEFINE);
    oid = oidValue();
value.setOid(oid);
{if ("" != null) return value;}
    throw new Error("Missing return statement in function");
  }

/////////////////////////////////////////////////////////////////////////////////////////////////////////////
// TEXTUAL_CONVENTION
/////////////////////////////////////////////////////////////////////////////////////////////////////////////
  final public MIB_SYNTAX syntaxDefine() throws ParseException {MIB_SYNTAX value = new MIB_SYNTAX();

        String string = "";
        boolean implicit = false;
    string = aStringValue();
    jj_consume_token(DEFINE);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case L_BRACKET:{
      jj_consume_token(L_BRACKET);
      read_BRACKET();
      jj_consume_token(R_BRACKET);
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IMPLICIT:{
      jj_consume_token(IMPLICIT);
implicit = true;
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    value = syntaxType();
value.setNick_name(string); value.setImplicit(implicit);
{if ("" != null) return value;}
    throw new Error("Missing return statement in function");
  }

  final public MIB_SYNTAX textualConvention() throws ParseException {MIB_SYNTAX value = new MIB_SYNTAX();

        String string = "";
    string = aStringValue();
    jj_consume_token(DEFINE);
    jj_consume_token(TEXTUAL_CONVENTION);
    read_SYNTAX();
    jj_consume_token(SYNTAX);
    value = syntaxType();
value.setNick_name(string);
{if ("" != null) return value;}
    throw new Error("Missing return statement in function");
  }

  final public MIB_SYNTAX syntaxType() throws ParseException {MIB_SYNTAX value = new MIB_SYNTAX();

        String string = "";
        String[] stringArray = {};
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case OBJECT_IDENTIFIER:{
      jj_consume_token(OBJECT_IDENTIFIER);
value.setType("OBJECT IDENTIFIER");
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      if (jj_2_9(3)) {
        jj_consume_token(SEQUENCE_OF);
        string = wStringValue();
value.setType("SEQUENCE OF"); value.setArg(string);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case CHOICE:{
          jj_consume_token(CHOICE);
          jj_consume_token(L_BRACE);
          stringArray = read_BRACE();
          jj_consume_token(R_BRACE);
value.setType("CHOICE"); value.setBrace(stringArray);
          break;
          }
        case SEQUENCE:{
          jj_consume_token(SEQUENCE);
          jj_consume_token(L_BRACE);
          stringArray = read_BRACE();
          jj_consume_token(R_BRACE);
value.setType("SEQUENCE"); value.setBrace(stringArray);
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          if (jj_2_10(3)) {
            jj_consume_token(OCTET_STRING);
            jj_consume_token(L_PAREN);
            stringArray = read_PAREN();
            jj_consume_token(R_PAREN);
value.setType("OCTET STRING"); value.setParen(stringArray);
          } else {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case OCTET_STRING:{
              jj_consume_token(OCTET_STRING);
value.setType("OCTET STRING");
              break;
              }
            default:
              jj_la1[10] = jj_gen;
              if (jj_2_11(2)) {
                jj_consume_token(INTEGER);
                jj_consume_token(L_BRACE);
                stringArray = read_BRACE();
                jj_consume_token(R_BRACE);
value.setType("INTEGER"); value.setBrace(stringArray);
              } else if (jj_2_12(2)) {
                jj_consume_token(INTEGER);
                jj_consume_token(L_PAREN);
                stringArray = read_PAREN();
                jj_consume_token(R_PAREN);
value.setType("INTEGER"); value.setParen(stringArray);
              } else {
                switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
                case INTEGER:{
                  jj_consume_token(INTEGER);
value.setType("INTEGER");
                  break;
                  }
                default:
                  jj_la1[11] = jj_gen;
                  if (jj_2_13(2)) {
                    jj_consume_token(BITS);
                    jj_consume_token(L_BRACE);
                    stringArray = read_BRACE();
                    jj_consume_token(R_BRACE);
value.setType("BITS"); value.setBrace(stringArray);
                  } else if (jj_2_14(2)) {
                    jj_consume_token(BITS);
                    jj_consume_token(L_PAREN);
                    stringArray = read_PAREN();
                    jj_consume_token(R_PAREN);
value.setType("BITS"); value.setParen(stringArray);
                  } else {
                    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
                    case BITS:{
                      jj_consume_token(BITS);
value.setType("BITS");
                      break;
                      }
                    default:
                      jj_la1[12] = jj_gen;
                      if (jj_2_15(2)) {
                        string = wStringValue();
                        jj_consume_token(L_BRACE);
                        stringArray = read_BRACE();
                        jj_consume_token(R_BRACE);
value.setType(string); value.setBrace(stringArray);
                      } else if (jj_2_16(2)) {
                        string = wStringValue();
                        jj_consume_token(L_PAREN);
                        stringArray = read_PAREN();
                        jj_consume_token(R_PAREN);
value.setType(string); value.setParen(stringArray);
                      } else {
                        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
                        case USTRING:
                        case WSTRING:{
                          string = aStringValue();
value.setType(string);
                          break;
                          }
                        default:
                          jj_la1[13] = jj_gen;
                          jj_consume_token(-1);
                          throw new ParseException();
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
{if ("" != null) return value;}
    throw new Error("Missing return statement in function");
  }

/////////////////////////////////////////////////////////////////////////////////////////////////////////////
// MACRO
/////////////////////////////////////////////////////////////////////////////////////////////////////////////
  final public void macro() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TEXTUAL_CONVENTION:{
      jj_consume_token(TEXTUAL_CONVENTION);
      break;
      }
    case OBJECT_TYPE:
    case TRAP_TYPE:
    case OBJECT_IDENTITY:
    case OBJECT_GROUP:
    case NOTIFICATION_GROUP:
    case MODULE_IDENTITY:
    case MODULE_COMPLIANCE:
    case AGENT_CAPABILITIES:
    case NOTIFICATION_TYPE:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OBJECT_TYPE:
      case OBJECT_IDENTITY:
      case MODULE_IDENTITY:{
        macroTypeValid();
        break;
        }
      case TRAP_TYPE:
      case OBJECT_GROUP:
      case NOTIFICATION_GROUP:
      case MODULE_COMPLIANCE:
      case AGENT_CAPABILITIES:
      case NOTIFICATION_TYPE:{
        macroTypeDiscard();
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(MACRO);
    jj_consume_token(DEFINE);
    jj_consume_token(BEGIN);
    read_END();
    jj_consume_token(END);
  }

  final public MIB_NODE.MIB_MACRO_TYPE macroTypeValid() throws ParseException {MIB_NODE.MIB_MACRO_TYPE value = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MODULE_IDENTITY:{
      jj_consume_token(MODULE_IDENTITY);
value = MIB_NODE.MIB_MACRO_TYPE.MODULE_IDENTITY;
      break;
      }
    case OBJECT_IDENTITY:{
      jj_consume_token(OBJECT_IDENTITY);
value = MIB_NODE.MIB_MACRO_TYPE.OBJECT_IDENTITY;
      break;
      }
    case OBJECT_TYPE:{
      jj_consume_token(OBJECT_TYPE);
value = MIB_NODE.MIB_MACRO_TYPE.OBJECT_TYPE;
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return value;}
    throw new Error("Missing return statement in function");
  }
